--- a/mobile_app/cocktail_app/pubspec.yaml
+++ b/mobile_app/cocktail_app/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   path_provider: ^0.4.1
-  barcode_scan: ^0.0.4
+  barcode_scan: 
   qr_flutter: ^2.0.0
 
 dev_dependencies:
