--- a/mobile_app/cocktail_app/pubspec.yaml
+++ b/mobile_app/cocktail_app/pubspec.yaml
@@ -48,7 +48,9 @@ flutter:
   # assets:
   #  - images/a_dot_burr.jpeg
   #  - images/a_dot_ham.jpeg
-
+  assets:
+   - assets/indonesia_monkey_wpo.jpg
+   
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
